--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -42,7 +42,16 @@ jobs:
       - name: Build
         run: make build
 
-      - name: Upload Release Asset
+      - name: Delete old release assets
+        uses: mknejp/delete-release-assets@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.create-release.outputs.tag_name }}
+          assets: runtime.zip
+          fail-if-no-release: false
+          fail-if-no-assets: false
+
+      - name: Upload release assets
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
