--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -42,14 +42,14 @@ jobs:
       - name: Build
         run: make build
 
-      - name: Delete old release assets
-        uses: mknejp/delete-release-assets@v1
+      - name: Remove asset
+        uses: flcdrg/remove-release-asset-action@v1
+        id: remove-release-asset
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.create-release.outputs.tag_name }}
-          assets: runtime.zip
-          fail-if-no-release: false
-          fail-if-no-assets: false
+            release_id: ${{ steps.create-release.outputs.id }}
+            asset_name: runtime.zip
 
       - name: Upload release assets
         id: upload-release-asset 
